--- a/client-state/text-editor/task.html
+++ b/client-state/text-editor/task.html
@@ -10,6 +10,7 @@
 </head>
 <body>
     <textarea id="editor" cols="30" rows="10"></textarea>
+    <button class="btn" id="button">Очистить</button>
     <script src="task.js"></script>
 </body>
 </html>
